simpleC/SimpleCParser.py
# Generated from SimpleC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleCParser ( Parser ):

    grammarFileName = "SimpleC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<'", "'>'", "'='", "','", 
                     "';'", "'['", "']'", "'('", "')'", "'{'", "'}'", "'void'", 
                     "'if'", "'else'", "'while'", "'for'", "'return'", "'!'", 
                     "'*'", "'/'", "'%'", "'+'", "'-'", "'>='", "'<='", 
                     "'=='", "'!='", "'&&'", "'||'", "'strlen'", "'printf'", 
                     "'scanf'", "'&'", "'atoi'", "'gets'", "'int'", "'bool'", 
                     "'double'", "'char'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Integer", "Double", "Char", "Bool", 
                      "String", "Identifier", "Lib", "Whitespace", "Newline", 
                      "BlockComment", "LineComment" ]

    RULE_prog = 0
    RULE_includes = 1
    RULE_include = 2
    RULE_declarations = 3
    RULE_declaration = 4
    RULE_variableDeclaration = 5
    RULE_arrayDeclaration = 6
    RULE_functions = 7
    RULE_function = 8
    RULE_functype = 9
    RULE_parameters = 10
    RULE_parameter = 11
    RULE_funcBody = 12
    RULE_body = 13
    RULE_block = 14
    RULE_assignBlock = 15
    RULE_arrayItem = 16
    RULE_ifBlocks = 17
    RULE_ifBlock = 18
    RULE_elseIfBlock = 19
    RULE_elseBlock = 20
    RULE_whileBlock = 21
    RULE_forBlock = 22
    RULE_forInit = 23
    RULE_forUpdate = 24
    RULE_returnBlock = 25
    RULE_condition = 26
    RULE_expr = 27
    RULE_func = 28
    RULE_userFunc = 29
    RULE_arguments = 30
    RULE_argument = 31
    RULE_standardFunc = 32
    RULE_strlenFunc = 33
    RULE_printfFunc = 34
    RULE_scanfFunc = 35
    RULE_atoiFunc = 36
    RULE_getsFunc = 37
    RULE_type = 38
    RULE_lib = 39
    RULE_id = 40
    RULE_integer = 41
    RULE_double = 42
    RULE_char = 43
    RULE_bool = 44
    RULE_string = 45

    ruleNames =  [ "prog", "includes", "include", "declarations", "declaration", 
                   "variableDeclaration", "arrayDeclaration", "functions", 
                   "function", "functype", "parameters", "parameter", "funcBody", 
                   "body", "block", "assignBlock", "arrayItem", "ifBlocks", 
                   "ifBlock", "elseIfBlock", "elseBlock", "whileBlock", 
                   "forBlock", "forInit", "forUpdate", "returnBlock", "condition", 
                   "expr", "func", "userFunc", "arguments", "argument", 
                   "standardFunc", "strlenFunc", "printfFunc", "scanfFunc", 
                   "atoiFunc", "getsFunc", "type", "lib", "id", "integer", 
                   "double", "char", "bool", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    Integer=41
    Double=42
    Char=43
    Bool=44
    String=45
    Identifier=46
    Lib=47
    Whitespace=48
    Newline=49
    BlockComment=50
    LineComment=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def includes(self):
            return self.getTypedRuleContext(SimpleCParser.IncludesContext,0)


        def declarations(self):
            return self.getTypedRuleContext(SimpleCParser.DeclarationsContext,0)


        def functions(self):
            return self.getTypedRuleContext(SimpleCParser.FunctionsContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = SimpleCParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.includes()
            self.state = 93
            self.declarations()
            self.state = 94
            self.functions()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.IncludeContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.IncludeContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_includes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludes" ):
                listener.enterIncludes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludes" ):
                listener.exitIncludes(self)




    def includes(self):

        localctx = SimpleCParser.IncludesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_includes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 96
                self.include()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lib(self):
            return self.getTypedRuleContext(SimpleCParser.LibContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)




    def include(self):

        localctx = SimpleCParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(SimpleCParser.T__0)
            self.state = 103
            self.match(SimpleCParser.T__1)
            self.state = 104
            self.lib()
            self.state = 105
            self.match(SimpleCParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.DeclarationContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)




    def declarations(self):

        localctx = SimpleCParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarations)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 107
                    self.declaration() 
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(SimpleCParser.VariableDeclarationContext,0)


        def arrayDeclaration(self):
            return self.getTypedRuleContext(SimpleCParser.ArrayDeclarationContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = SimpleCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.arrayDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.IdContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.IdContext,i)


        def type_(self):
            return self.getTypedRuleContext(SimpleCParser.TypeContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.ExprContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.ExprContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)




    def variableDeclaration(self):

        localctx = SimpleCParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.type_()
            self.state = 118
            self.id_()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 119
                self.match(SimpleCParser.T__3)
                self.state = 120
                self.expr(0)


            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 123
                self.match(SimpleCParser.T__4)
                self.state = 124
                self.id_()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 125
                    self.match(SimpleCParser.T__3)
                    self.state = 126
                    self.expr(0)


                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self.match(SimpleCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(SimpleCParser.TypeContext,0)


        def id_(self):
            return self.getTypedRuleContext(SimpleCParser.IdContext,0)


        def integer(self):
            return self.getTypedRuleContext(SimpleCParser.IntegerContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_arrayDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayDeclaration" ):
                listener.enterArrayDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayDeclaration" ):
                listener.exitArrayDeclaration(self)




    def arrayDeclaration(self):

        localctx = SimpleCParser.ArrayDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrayDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.type_()
            self.state = 137
            self.id_()
            self.state = 138
            self.match(SimpleCParser.T__6)
            self.state = 139
            self.integer()
            self.state = 140
            self.match(SimpleCParser.T__7)
            self.state = 141
            self.match(SimpleCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.FunctionContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.FunctionContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_functions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctions" ):
                listener.enterFunctions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctions" ):
                listener.exitFunctions(self)




    def functions(self):

        localctx = SimpleCParser.FunctionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_functions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2061584310272) != 0):
                self.state = 143
                self.function()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functype(self):
            return self.getTypedRuleContext(SimpleCParser.FunctypeContext,0)


        def id_(self):
            return self.getTypedRuleContext(SimpleCParser.IdContext,0)


        def parameters(self):
            return self.getTypedRuleContext(SimpleCParser.ParametersContext,0)


        def funcBody(self):
            return self.getTypedRuleContext(SimpleCParser.FuncBodyContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = SimpleCParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.functype()
            self.state = 150
            self.id_()
            self.state = 151
            self.match(SimpleCParser.T__8)
            self.state = 152
            self.parameters()
            self.state = 153
            self.match(SimpleCParser.T__9)
            self.state = 154
            self.match(SimpleCParser.T__10)
            self.state = 155
            self.funcBody()
            self.state = 156
            self.match(SimpleCParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(SimpleCParser.TypeContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_functype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctype" ):
                listener.enterFunctype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctype" ):
                listener.exitFunctype(self)




    def functype(self):

        localctx = SimpleCParser.FunctypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_functype)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [37, 38, 39, 40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.type_()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(SimpleCParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.ParameterContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.ParameterContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)




    def parameters(self):

        localctx = SimpleCParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [37, 38, 39, 40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.parameter()
                self.state = 167
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==5:
                    self.state = 163
                    self.match(SimpleCParser.T__4)
                    self.state = 164
                    self.parameter()
                    self.state = 169
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(SimpleCParser.TypeContext,0)


        def id_(self):
            return self.getTypedRuleContext(SimpleCParser.IdContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = SimpleCParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.type_()
            self.state = 174
            self.id_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(SimpleCParser.BodyContext,0)


        def returnBlock(self):
            return self.getTypedRuleContext(SimpleCParser.ReturnBlockContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_funcBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBody" ):
                listener.enterFuncBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBody" ):
                listener.exitFuncBody(self)




    def funcBody(self):

        localctx = SimpleCParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.body()
            self.state = 177
            self.returnBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.BlockContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.BlockContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleCParser.FuncContext)
            else:
                return self.getTypedRuleContext(SimpleCParser.FuncContext,i)


        def getRuleIndex(self):
            return SimpleCParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = SimpleCParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 185
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 183
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                    if la_ == 1:
                        self.state = 179
                        self.block()
                        pass

                    elif la_ == 2:
                        self.state = 180
                        self.func()
                        self.state = 181
                        self.match(SimpleCParser.T__5)
                        pass

             
                self.state = 187
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(SimpleCParser.DeclarationContext,0)


        def assignBlock(self):
            return self.getTypedRuleContext(SimpleCParser.AssignBlockContext,0)


        def ifBlocks(self):
            return self.getTypedRuleContext(SimpleCParser.IfBlocksContext,0)


        def whileBlock(self):
            return self.getTypedRuleContext(SimpleCParser.WhileBlockContext,0)


        def forBlock(self):
            return self.getTypedRuleContext(SimpleCParser.ForBlockContext,0)


        def returnBlock(self):
            return self.getTypedRuleContext(SimpleCParser.ReturnBlockContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = SimpleCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_block)
        try:
            self.state = 194
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [37, 38, 39, 40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.declaration()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 2)
                self.state = 189
                self.assignBlock()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 190
                self.ifBlocks()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 4)
                self.state = 191
                self.whileBlock()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 5)
                self.state = 192
                self.forBlock()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 6)
                self.state = 193
                self.returnBlock()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(SimpleCParser.ExprContext,0)


        def id_(self):
            return self.getTypedRuleContext(SimpleCParser.IdContext,0)


        def arrayItem(self):
            return self.getTypedRuleContext(SimpleCParser.ArrayItemContext,0)


        def getRuleIndex(self):
            return SimpleCParser.RULE_assignBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignBlock" ):
                listener.enterAssignBlock(self)
